<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    tools:context=".VerEntrenamiento">

    <!-- Barra superior -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:background="#E0E0E0"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


        <TextView
            android:id="@+id/textView15"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fechaEntreno"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ipFecha"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="date"
            android:ems="10"
            android:focusable="false"
            android:onClick="showDatePickerDialog"/>

        <TextView
            android:id="@+id/textView18"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selectEntrena"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="34dp"
            android:background="@drawable/estilos_desplegable" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comentarios"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/ipComentarios"
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:ems="10"
            android:inputType="text"
            android:text=" "
            android:textAlignment="textStart" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/repeticion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/textView17"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vueltas"
            android:textStyle="bold" />

        <!-- Tabla con tres columnas -->
        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="*">

            <!-- Encabezados de la tabla -->
            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/primary"
                android:padding="4dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/orden"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/repeticion"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/peso"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textStyle="bold" />
            </TableRow>

            <!-- Fila de ejemplo con inputs -->
            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/table_border"
                android:textAlignment="center">

                <EditText
                    android:id="@+id/inputOrden"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:background="@drawable/table_border"
                    android:hint="@string/orden"
                    android:inputType="number"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/inputRepeticion"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/repeticion"
                    android:inputType="number"
                    android:background="@drawable/table_border"
                    android:textAlignment="center" />

                <EditText
                    android:id="@+id/inputPeso"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/table_border"
                    android:hint="@string/peso"
                    android:inputType="number|numberDecimal|numberSigned"
                    android:textAlignment="center" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/btnAddRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/primary"
            android:text="@string/añadirFila"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/guardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repeticion" />

</androidx.constraintlayout.widget.ConstraintLayout>