<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <!-- Barra Superior Fija -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="68dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="-1dp"
        android:background="#E0E0E0"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_alignParentStart="true">

            <ImageButton
                android:id="@+id/btnBackHome"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/home"
                android:contentDescription="Home"
                android:minWidth="48dp"
                android:minHeight="48dp"
                android:scaleType="fitEnd" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/app_name"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:text="© Asier Larrazabal"
        android:textColor="@android:color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="286dp"
        android:text="@string/idioma" />

    <ListView
        android:id="@+id/listIdioma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:choiceMode="singleChoice">

    </ListView>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/listIdioma"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/guardar" />

</RelativeLayout>